--- a/.github/workflows/build-doc.yml
+++ b/.github/workflows/build-doc.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
     - master
+  pull_request:
+    branches:
+    - master
 
 jobs:
   build-doc:
@@ -42,6 +45,7 @@ jobs:
           cp build/latex/notes.pdf build/html/_static/
 
       - name: Deploy
+        if: github.event_name == 'push'
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
