--- a/.github/workflows/build-doc.yml
+++ b/.github/workflows/build-doc.yml
@@ -27,23 +27,26 @@ jobs:
         run: |
           pip install -r ./docs/requirements.txt
 
-      - name: Build doc
-        shell: bash
-        run: |
-          cd docs
-          python3 -m pip install -r ./requirements.txt
-          make html
-          touch build/html/.nojekyll
-
-          make latex
-
       - name: Build pdf
         uses: xu-cheng/texlive-action/full@v1
         with:
           run: |
-            cd docs/build/latex
-            latexmk -pdf -dvi -ps- notes.tex
+            apk add make && \
+            apk add python3 py3-pip && \
+            python3 -m pip install -r ./docs/requirements.txt && \
+            cd docs && \
+            make latex && \
+            mkdir -pv build/html/_static && \
+            cd build/latex && \
+            latexmk -pdf -dvi -ps- notes.tex && \
             cp -v notes.pdf ../html/_static/
+
+      - name: Build html
+        shell: bash
+        run: |
+          cd docs
+          make html
+          touch build/html/.nojekyll
 
       - name: Upload pdf
         uses: actions/upload-artifact@v2
@@ -52,7 +55,7 @@ jobs:
           path: docs/build/latex/notes.pdf
 
       - name: Deploy
-        if: github.event_name == 'push' and github.ref == 'ref/head/master'
+        if: github.event_name == 'push' && github.ref == 'ref/head/master'
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
