--- a/.github/workflows/build-doc.yml
+++ b/.github/workflows/build-doc.yml
@@ -55,7 +55,8 @@ jobs:
           path: docs/build/latex/notes.pdf
 
       - name: Deploy
-        if: github.event_name == 'push' && github.ref == 'ref/head/master'
+        # if: github.event_name == 'push' && github.ref == 'ref/head/master'
+        if: github.event_name == 'push'
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
