--- a/docs/Makefile
+++ b/docs/Makefile
@@ -17,5 +17,6 @@ help:
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile
-	@make -C source/latex/tikz/code
+	# failed on GitHub actions
+	#@make -C source/latex/tikz/code
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
