Add wave reader

--- a/docs/source/android/kotlin/code/jni/feat-extractor/Makefile
+++ b/docs/source/android/kotlin/code/jni/feat-extractor/Makefile
@@ -1,22 +1,23 @@
-KFBANK_INSTALL_DIR := /ceph-fj/fangjun/open-source/kaldi-native-fbank/build/install
+SHERPA_NCNN_INSTALL_DIR := /ceph-fj/fangjun/open-source/sherpa-ncnn/build/install
+
 CXXFLAGS := -I $(JAVA_HOME)/include
 CXXFLAGS += -I $(JAVA_HOME)/include/linux
-CXXFLAGS += -I $(KFBANK_INSTALL_DIR)/include
+CXXFLAGS += -I $(SHERPA_NCNN_INSTALL_DIR)/include
 CXXFLAGS += -Wall
 
-LDFLAGS := -L $(KFBANK_INSTALL_DIR)/lib -lkaldi-native-fbank-core
-LDFLAGS += -Wl,-rpath,$(KFBANK_INSTALL_DIR)/lib
+LDFLAGS := -L $(SHERPA_NCNN_INSTALL_DIR)/lib -lkaldi-native-fbank-core -lsherpa-ncnn-core -lncnn
+LDFLAGS += -Wl,-rpath,$(SHERPA_NCNN_INSTALL_DIR)/lib
 
-all: main.jar libonline-feature.so
+all: main.jar libsherpa-ncnn.so
 
-main.jar: Main.kt OnlineFeature.kt
-	kotlinc-jvm -include-runtime -d main.jar Main.kt OnlineFeature.kt
+main.jar: Main.kt OnlineFeature.kt WaveReader.kt
+	kotlinc-jvm -include-runtime -d main.jar Main.kt OnlineFeature.kt WaveReader.kt
 
-libonline-feature.so: online-feature.cc online-feature.h
-	$(CXX) -o $@ -shared -fPIC $(CXXFLAGS) online-feature.cc $(LDFLAGS)
+libsherpa-ncnn.so: online-feature.cc sherpa-ncnn.cc online-feature.h sherpa-ncnn.h
+	$(CXX) -o $@ -shared -fPIC $(CXXFLAGS) online-feature.cc sherpa-ncnn.cc $(LDFLAGS)
 
 run: all
 	java -jar main.jar
 
 clean:
-	$(RM) main.jar libonline-feature.so
+	$(RM) main.jar libsherpa-ncnn.so
