--- a/.github/workflows/build-doc.yml
+++ b/.github/workflows/build-doc.yml
@@ -37,18 +37,19 @@ jobs:
             cd docs && \
             make html &&
             touch build/html/.nojekyll
-            make latex && \
-            mkdir -pv build/html/_static && \
-            cd build/latex && \
-            latexmk -pdf -dvi -ps- notes.tex && \
-            cp -v notes.pdf ../html/_static/
+
+            # make latex && \
+            # mkdir -pv build/html/_static && \
+            # cd build/latex && \
+            # latexmk -pdf -dvi -ps- notes.tex && \
+            # cp -v notes.pdf ../html/_static/
 
 
-      - name: Upload pdf
-        uses: actions/upload-artifact@v2
-        with:
-          name: notes.pdf
-          path: docs/build/latex/notes.pdf
+      # - name: Upload pdf
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: notes.pdf
+      #     path: docs/build/latex/notes.pdf
 
       - name: Deploy
         # if: github.event_name == 'push' && github.ref == 'ref/head/master'
